--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "bdd-stdin": "^0.2.0",
     "docs-core": "0.0.0-alpha-5.5",
-    "docs-theme-default": "0.0.0-alpha-5.5"
+    "docs-theme-default": "0.0.0-alpha-5.5",
+    "nixt": "^0.5.0",
   },
   "ava": {
     "files": [
@@ -39,6 +40,8 @@
     ],
     "source": [
       "dist/**/*"
-    ]
+    ],
+    "concurrency": 1,
+    "babel": "inherit"
   }
 }
