--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fs-extra-promisify": "^0.0.2",
     "globby": "^6.0.0",
     "inquirer": "^1.1.3",
+    "inquirer-autocomplete-prompt": "^0.3.0",
     "lint-rules": "git+https://git@stash.marketamerica.com/scm/ui/lint-rules.git#0.0.2",
     "to-js": "^0.0.6"
   },
