--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "docs-core": "0.0.0-alpha-5.5",
     "docs-theme-default": "0.0.0-alpha-5.5",
     "nixt": "^0.5.0",
-    "pug": "^2.0.0-beta6"
+    "pug": "^2.0.0-beta6",
+    "touch": "~1.0.0"
   },
   "ava": {
     "files": [
