--- a/project-init/package.json
+++ b/project-init/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "description": "Contains all the projects for ${project_name}",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make ci-test"
   },
   "author": "${author_name} <${author_email}>",
   "license": "ISC",
   "devDependencies": {
-    "lint-rules": "github:ma/lint-rules",
-    "project-tools": "github:ma/project-tools#${version}"
+    "lint-rules": "github:ma-shop/lint-rules",
+    "project-tools": "^${version}"
   }
 }
