--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "globby": "^6.0.0",
     "inquirer": "^1.1.3",
     "inquirer-autocomplete-prompt": "^0.3.0",
+    "is-glob": "^3.1.0",
     "js-beautify": "~1.6.4",
     "less": "^2.7.1",
     "lint-rules": "github:ma-shop/lint-rules",
     "lodash": "^4.16.4",
+    "matcher": "^0.1.2",
     "node-sass": "^3.10.1",
     "parse-glob": "~3.0.4",
     "postcss": "^5.2.4",
