Added support for travis ci tests (#2)
* Added support for travis ci tests

* removed yarn references

* updated make flags

* fix travis errors

* remove the output to the console in the utils tests

--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,8 @@
     "stage-0"
   ],
   "plugins": [
-    "transform-runtime"
+    "transform-runtime",
+    "array-includes",
+    "external-helpers"
   ]
 }
