--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "is-glob": "^3.1.0",
     "js-beautify": "~1.6.4",
     "less": "^2.7.1",
-    "lint-rules": "github:ma-shop/lint-rules",
+    "lint-rules": "ma-shop/lint-rules",
     "lodash": "^4.16.4",
     "matcher": "^0.1.2",
     "node-sass": "^3.10.1",
@@ -43,8 +43,10 @@
   },
   "devDependencies": {
     "ava": "^0.16.0",
-    "ava-spec": "github:tjbenton/ava-spec",
+    "ava-spec": "tjbenton/ava-spec",
     "babel-cli": "^6.14.0",
+    "babel-plugin-array-includes": "~2.0.3",
+    "babel-plugin-external-helpers": "~6.18.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-latest": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
@@ -53,6 +55,7 @@
     "docs-theme-default": "0.0.0-alpha-6.1",
     "nixt": "^0.5.0",
     "pug": "^2.0.0-beta6",
+    "test-console": "~1.0.0",
     "touch": "~1.0.0"
   },
   "ava": {
@@ -64,6 +67,7 @@
     "source": [
       "dist/**/*"
     ],
-    "failFast": true
+    "failFast": true,
+    "concurrency": 1
   }
 }
