--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "project-tools": "bin/project"
   },
   "scripts": {
-    "test": "make test"
+    "test": "make ci"
   },
   "author": "Tyler Benton <tjbenton21@gmail.com> (https://github.com/tjbenton)",
   "license": "ISC",
@@ -54,6 +54,7 @@
     "docs-core": "0.0.0-alpha-6.1",
     "docs-theme-default": "0.0.0-alpha-6.1",
     "nixt": "^0.5.0",
+    "np": "~2.12.0",
     "pug": "^2.0.0-beta6",
     "test-console": "~1.0.0",
     "touch": "~1.0.0"
@@ -68,6 +69,6 @@
       "dist/**/*"
     ],
     "failFast": true,
-    "concurrency": 1
+    "concurrency": 5
   }
 }
