--- a/package.json
+++ b/package.json
@@ -15,48 +15,49 @@
   "dependencies": {
     "async-array-methods": "^2.1.0",
     "babel-runtime": "^6.11.6",
-    "chalk": "^1.1.3",
+    "chalk": "^2.1.0",
     "chokidar": "^1.6.0",
     "commander": "^2.9.0",
     "consolidate": "^0.14.1",
     "cssnano": "^3.10.0",
-    "debug": "^2.2.0",
+    "debug": "^3.0.0",
     "fs-extra-promisify": "^0.0.2",
     "globby": "^6.0.0",
-    "inquirer": "^3.0.6",
-    "inquirer-autocomplete-prompt": "^0.8.0",
-    "is-glob": "^3.1.0",
+    "inquirer": "^3.2.2",
+    "inquirer-autocomplete-prompt": "^0.11.1",
+    "is-glob": "^4.0.0",
     "js-beautify": "~1.6.4",
     "less": "^2.7.1",
-    "lint-rules": "ma-shop/lint-rules",
+    "lint-rules": "ma-shop/lint-rules#v0.1.4",
     "lodash": "^4.16.4",
-    "matcher": "^0.1.2",
+    "matcher": "^1.0.0",
     "node-sass": "^4.5.2",
     "parse-glob": "~3.0.4",
     "postcss": "^6.0.1",
-    "rollup": "^0.41.6",
-    "rollup-plugin-uglify": "~1.0.1",
+    "rollup": "^0.47.4",
+    "rollup-plugin-uglify": "^2.0.1",
     "source-map-url": "~0.4.0",
+    "strip-ansi": "^4.0.0",
     "stylus": "^0.54.5",
     "templates": "^1.2.8",
     "to-js": "^0.0.6"
   },
   "devDependencies": {
-    "ava": "^0.19.1",
+    "ava": "^0.22.0",
     "ava-spec": "^1.1.0",
-    "babel-cli": "^6.14.0",
+    "babel-cli": "^6.26.0",
     "babel-plugin-array-includes": "~2.0.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-latest": "^6.14.0",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-env": "~1.6.0",
+    "babel-preset-stage-0": "^6.24.1",
     "bdd-stdin": "^0.2.0",
     "docs-core": "^0.0.1",
     "nixt": "^0.5.0",
     "np": "^2.14.1",
     "pug": "^2.0.0-beta6",
     "test-console": "~1.0.0",
-    "touch": "~1.0.0"
+    "touch": "^3.1.0"
   },
   "ava": {
     "files": [
@@ -69,5 +70,37 @@
     ],
     "failFast": true,
     "concurrency": 5
+  },
+  "eslintConfig": {
+    "extends": [
+      "./node_modules/lint-rules/eslint/index.js"
+    ],
+    "rules": {
+      "semi": [
+        "warn",
+        "never"
+      ]
+    }
+  },
+  "eslintIgnore": [
+    "test/**/fixtures"
+  ],
+  "babel": {
+    "presets": [
+      [
+        "env",
+        {
+          "targets": {
+            "node": "6.10"
+          }
+        }
+      ],
+      "stage-0"
+    ],
+    "plugins": [
+      "transform-runtime",
+      "external-helpers",
+      "array-includes"
+    ]
   }
 }
