--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "debug": "^3.0.0",
     "fs-extra-promisify": "^0.0.2",
     "globby": "^6.0.0",
+    "i18next": "^8.4.3",
     "inquirer": "^3.2.2",
     "inquirer-autocomplete-prompt": "^0.11.1",
     "is-glob": "^4.0.0",
