added `nyc` for code coverage

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "docs-core": "^0.0.1",
     "nixt": "^0.5.0",
     "np": "^2.14.1",
+    "nyc": "^11.2.1",
     "pug": "^2.0.0-beta6",
     "test-console": "~1.0.0",
     "touch": "^3.1.0"
